// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Estimates Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "buyer": {
        "company": {
          "additional_street": "Bâtiment D",
          "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
          "administrative_area": null,
          "country": /* Country Instance => */ "FR",
          "id": 1,
          "invoice_identifier": "0225:123456789_LOCATION",
          "is_public_entity": false,
          "legal_name": "Testing, Inc",
          "locality": "Annecy",
          "note": "Anciennement Machin, Inc.",
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "74000",
          "registration_id": "12345678900001",
          "service_code": null,
          "street": "10 avenue de la gare",
          "vat_number": "FR32123456789",
        },
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "reference": "0001",
      },
      "created_at": /* DateTime Instance => */ "2021-01-30 14:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
      "due_date": null,
      "due_delay": 30,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "has_final_invoice": false,
      "id": 1,
      "lang": "en",
      "number": "D-2021-00001",
      "related_invoices": [
        {
          "created_at": /* DateTime Instance => */ "2021-02-15 10:00:00",
          "currency": /* Currency Instance => */ "EUR",
          "date": /* DateTime Instance => */ "2021-02-15 10:00:00",
          "format": 3,
          "global_tax_exemption_code": null,
          "global_tax_exemption_reason": null,
          "global_tax_regime": null,
          "id": 5,
          "is_cancelled": false,
          "is_credit_note": false,
          "is_overdue": true,
          "is_prepayment": true,
          "number": "2021-00002",
          "status": "pending",
          "total_taxes": [
            {
              "base": /* Decimal Instance => */ "82.96",
              "total": /* Decimal Instance => */ "16.59",
              "type": "S",
              "value": /* Decimal Instance => */ "20",
            },
            {
              "base": /* Decimal Instance => */ "0.43",
              "total": /* Decimal Instance => */ "0.02",
              "type": "S",
              "value": /* Decimal Instance => */ "5.5",
            },
          ],
          "total_with_taxes": /* Decimal Instance => */ "100",
          "total_without_taxes": /* Decimal Instance => */ "83.39",
          "url": {
            "pdf": "http://loxya.test/invoices/5/pdf",
            "ubl": "http://loxya.test/invoices/5/ubl",
          },
        },
      ],
      "status": "accepted",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "882.07",
          "total": /* Decimal Instance => */ "176.41",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "4.57",
          "total": /* Decimal Instance => */ "0.25",
          "type": "S",
          "value": /* Decimal Instance => */ "5.5",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "1063.3",
      "total_without_taxes": /* Decimal Instance => */ "886.64",
      "url": "http://loxya.test/estimates/1/pdf",
    },
    {
      "buyer": {
        "company": {
          "additional_street": "Bâtiment D",
          "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
          "administrative_area": null,
          "country": /* Country Instance => */ "FR",
          "id": 1,
          "invoice_identifier": "0225:123456789_LOCATION",
          "is_public_entity": false,
          "legal_name": "Testing, Inc",
          "locality": "Annecy",
          "note": "Anciennement Machin, Inc.",
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "74000",
          "registration_id": "12345678900001",
          "service_code": null,
          "street": "10 avenue de la gare",
          "vat_number": "FR32123456789",
        },
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "reference": "0001",
      },
      "created_at": /* DateTime Instance => */ "2022-06-14 22:48:20",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2022-06-14 22:48:20",
      "due_date": /* Day Instance => */ "2022-06-20",
      "due_delay": null,
      "format": 1,
      "global_tax_exemption_code": "VATEX-FR-FRANCHISE",
      "global_tax_exemption_reason": null,
      "global_tax_regime": "E",
      "has_final_invoice": false,
      "id": 2,
      "lang": "fr",
      "related_invoices": [],
      "status": "sent",
      "total_taxes": [],
      "total_with_taxes": /* Decimal Instance => */ "660.34",
      "total_without_taxes": /* Decimal Instance => */ "550.28",
      "url": "http://loxya.test/estimates/2/pdf",
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "created_at": /* DateTime Instance => */ "2026-04-15 09:30:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2026-04-15 09:30:00",
      "due_date": null,
      "due_delay": 30,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "has_final_invoice": false,
      "id": 3,
      "lang": "fr",
      "number": "D-2026-00002",
      "related_invoices": [],
      "status": "accepted",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "-50",
          "total": /* Decimal Instance => */ "-10",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "-60",
      "total_without_taxes": /* Decimal Instance => */ "-50",
      "url": "http://loxya.test/estimates/3/pdf",
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "created_at": /* DateTime Instance => */ "2026-05-10 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2026-05-10 10:00:00",
      "due_date": null,
      "due_delay": 30,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "has_final_invoice": false,
      "id": 4,
      "lang": "en",
      "number": "D-2026-00003",
      "related_invoices": [],
      "status": "pending",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "0",
          "total": /* Decimal Instance => */ "0",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "0",
      "total_without_taxes": /* Decimal Instance => */ "0",
      "url": "http://loxya.test/estimates/4/pdf",
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "created_at": /* DateTime Instance => */ "2026-01-15 09:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2026-01-15 09:00:00",
      "due_date": null,
      "due_delay": 30,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "has_final_invoice": false,
      "id": 5,
      "lang": "fr",
      "number": "D-2026-00001",
      "related_invoices": [],
      "status": "accepted",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "1000",
          "total": /* Decimal Instance => */ "200",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "-998.56",
          "total": /* Decimal Instance => */ "-99.86",
          "type": "S",
          "value": /* Decimal Instance => */ "10",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "101.58",
      "total_without_taxes": /* Decimal Instance => */ "1.44",
      "url": "http://loxya.test/estimates/5/pdf",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 5,
    "total": {
      "items": 5,
      "pages": 1,
    },
  },
}
`;

exports[`Estimates Api one() parse the returned data correctly 1`] = `
{
  "buyer": {
    "additional_street": null,
    "address": "1, somewhere av.
12340 Megacity",
    "administrative_area": null,
    "company": {
      "additional_street": "Bâtiment D",
      "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
      "administrative_area": null,
      "country": /* Country Instance => */ "FR",
      "id": 1,
      "invoice_identifier": "0225:123456789_LOCATION",
      "is_public_entity": false,
      "legal_name": "Testing, Inc",
      "locality": "Annecy",
      "note": "Anciennement Machin, Inc.",
      "phone": /* Phone Instance => */ "+33123456789",
      "postal_code": "74000",
      "registration_id": "12345678900001",
      "service_code": null,
      "street": "10 avenue de la gare",
      "vat_number": "FR32123456789",
    },
    "company_id": 1,
    "country": /* Country Instance => */ "FR",
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "id": 1,
    "is_deleted": false,
    "is_invoiceable": true,
    "language": "en",
    "last_name": "Fountain",
    "locality": "Megacity",
    "note": null,
    "phone": null,
    "postal_code": "12340",
    "reference": "0001",
    "street": "1, somewhere av.",
    "user_id": 1,
  },
  "created_at": /* DateTime Instance => */ "2021-01-30 14:00:00",
  "currency": /* Currency Instance => */ "EUR",
  "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
  "due_date": null,
  "due_delay": 30,
  "format": 3,
  "global_tax_exemption_code": null,
  "global_tax_exemption_reason": null,
  "global_tax_regime": null,
  "has_final_invoice": false,
  "id": 1,
  "lang": "en",
  "number": "D-2021-00001",
  "related_invoices": [
    {
      "created_at": /* DateTime Instance => */ "2021-02-15 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-02-15 10:00:00",
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 5,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_overdue": true,
      "is_prepayment": true,
      "number": "2021-00002",
      "status": "pending",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "82.96",
          "total": /* Decimal Instance => */ "16.59",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "0.43",
          "total": /* Decimal Instance => */ "0.02",
          "type": "S",
          "value": /* Decimal Instance => */ "5.5",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "100",
      "total_without_taxes": /* Decimal Instance => */ "83.39",
      "url": {
        "pdf": "http://loxya.test/invoices/5/pdf",
        "ubl": "http://loxya.test/invoices/5/ubl",
      },
    },
  ],
  "status": "accepted",
  "total_taxes": [
    {
      "base": /* Decimal Instance => */ "882.07",
      "total": /* Decimal Instance => */ "176.41",
      "type": "S",
      "value": /* Decimal Instance => */ "20",
    },
    {
      "base": /* Decimal Instance => */ "4.57",
      "total": /* Decimal Instance => */ "0.25",
      "type": "S",
      "value": /* Decimal Instance => */ "5.5",
    },
  ],
  "total_with_taxes": /* Decimal Instance => */ "1063.3",
  "total_without_taxes": /* Decimal Instance => */ "886.64",
  "url": "http://loxya.test/estimates/1/pdf",
}
`;
